--- a/main.css
+++ b/main.css
@@ -5,12 +5,14 @@ button {
   font-style: italic;
   font-weight: bold;
 }
+
 #txt {
   font-size: 10px;
   visibility: hidden;
   display: block;
   color: #fff;
 }
+
 .stella {
   /* The most important part */
   position: fixed;
@@ -26,6 +28,7 @@ hr {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
 .background {
   filter: sepia(100%) saturate(300%) brightness(50%) hue-rotate(198deg);
   min-height: 100%;
@@ -35,6 +38,7 @@ hr {
   left: 0;
   z-index: -1;
 }
+
 @font-face {font-family: Calamity;src: url(https://komali.dev/CALAMITY-BOLD.TTF);}
 .big1 {
 font-size: 60px;
@@ -48,6 +52,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 55rem 1fr;
   grid-template-rows: 0rem auto;
+  min-height: 100%;
 }
 
 #main {
@@ -55,7 +60,6 @@ body {
   display: block;
 
   border-radius: .5rem;
-
 
   grid-column: 2 / 3;
   grid-row: 2 / 3;
@@ -70,14 +74,12 @@ body {
   background-color: white;
   border-radius: 10px;
 
-
   box-sizing: border-box;
   border-style: solid;
   border-color: white;
   border-width: 0 .2rem .2rem .2rem;
 
   line-height: 28px;
-
 
   position: relative;
   z-index: 6;
@@ -86,6 +88,7 @@ body {
   overflow: hidden;
   background-origin: border-box;
 }
+
 #flag {
   height: 1rem;
   border-radius: 4px;
@@ -115,17 +118,21 @@ body {
 
 
 }
+
 .widget > img {
   height: 70%;
   vertical-align: -.21em;
   
 }
+
 .crop {
   border-radius: 100%;
 }
+
 .fadein {
   animation: normal fadein 1s linear;
 }
+
 @keyframes flash {
   0% {
       filter: hue-rotate(0deg);
