--- a/main.css
+++ b/main.css
@@ -1,5 +1,17 @@
 :root {
   --color-blue: #1a7ce2;
+  --color-bg: #ffffff;
+  --color-text: #000000;
+  --color-shadow: #ffffff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-blue: #3088e6;
+    --color-bg: #181A1B;
+    --color-shadow: #303436;
+    --color-text: #FFFFFF;
+  }
 }
 
 button {
@@ -24,7 +36,7 @@ button {
   right: 10px;
 }
 
-a:-webkit-any-link {
+a {
   color: var(--color-blue);
 }
 
@@ -75,12 +87,13 @@ body {
   margin: 0 0 0 0;
   padding: 10px;
   /* width: 45rem;*/
-  background-color: white;
+  background-color: var(--color-bg);
+  color: var(--color-text);
   border-radius: 10px;
 
   box-sizing: border-box;
   border-style: solid;
-  border-color: white;
+  border-color: var(--color-shadow);
   border-width: 0 .2rem .2rem .2rem;
 
   line-height: 1.75em;
