--- a/main.css
+++ b/main.css
@@ -65,9 +65,6 @@ body {
   background-color: #000033;
   font-family: 'Calamity','sans-serif';
   margin: 0;
-  display: grid;
-  grid-template-columns: 1fr 55rem 1fr;
-  grid-template-rows: 0rem auto;
   min-height: 100vh;
 }
 
@@ -77,16 +74,14 @@ body {
 
   border-radius: .5rem;
 
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-  width: 55rem;
+  margin: 10em auto;
+  max-width: min(55rem, calc(100vw - 3rem));
 }
 
 #inner {
   width: 100%;
   margin: 0 0 0 0;
   padding: 10px;
-  /* width: 45rem;*/
   background-color: var(--color-bg);
   color: var(--color-text);
   border-radius: 10px;
@@ -123,7 +118,7 @@ body {
 
 .widget {
   background-color: rgba(0,0,0,.3);
-  border-radius:10px;
+  border-radius: 10px;
   display: inline-block;
   align-items: center;
   position: inherit;
