--- a/main.css
+++ b/main.css
@@ -1,7 +1,8 @@
 :root {
   --color-green: #26c983;
   --color-blue: #1a7ce2;
-  --color-bg: #ffffff;
+  --color-inner-bg: #ffffff;
+  --color-body-bg: #000050;
   --color-text: #000000;
   --color-shadow: #ffffff;
 }
@@ -9,9 +10,10 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --color-blue: #3088e6;
-    --color-bg: #181A1B;
-    --color-shadow: #303436;
+    --color-inner-bg: #181A1B;
+    --color-body-bg: #000033;
     --color-text: #FFFFFF;
+    --color-shadow: #303436;
   }
 }
 
@@ -47,7 +49,7 @@
 }
 
 body {
-  background-color: #000033;
+  background-color: var(--color-body-bg);
   font-family: 'Calamity','sans-serif';
   margin: 0;
   min-height: 100vh;
@@ -73,7 +75,7 @@ a:hover {
   width: 100%;
   margin: 0;
   padding: 10px;
-  background-color: var(--color-bg);
+  background-color: var(--color-inner-bg);
   color: var(--color-text);
   border-radius: 10px;
   box-sizing: border-box;
