--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
 :root {
+  --top-padding: 5em;
+
   --color-green: #26c983;
   --color-blue: #1a7ce2;
   --color-inner-bg: #ffffff;
@@ -54,7 +56,7 @@ body {
   background-color: var(--color-body-bg);
   font-family: 'Calamity','sans-serif';
   margin: 0;
-  min-height: 100vh;
+  min-height: calc(100vh - var(--top-padding));
 }
 
 a {
@@ -69,7 +71,7 @@ a:hover {
   box-sizing: border-box;
   display: block;
   border-radius: .5rem;
-  margin: 5em auto;
+  margin: var(--top-padding) auto;
   max-width: min(55rem, calc(100vw - 3rem));
 }
 
