--- a/main.css
+++ b/main.css
@@ -50,8 +50,8 @@ body {
   min-height: calc(100vh - var(--top-padding));
 }
 
-a {color: var(--color-blue);
-  font-weight: bold;
+a {
+  color: var(--color-blue);
 }
 
 a:hover {
@@ -66,6 +66,7 @@ a:hover {
 .plug {
   float: right;
   margin: 0.6em;
+  font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
 .main {
