--- a/main.css
+++ b/main.css
@@ -37,12 +37,6 @@
   }
 }
 
-@media screen and (min-width: 520px) {
-  .no_break {
-    display: none;
-  }
-}
-
 body {
   background-color: var(--color-body-bg);
   font-family: 'Calamity','sans-serif';
@@ -70,7 +64,7 @@ a:hover {
 }
 
 .inner {
-  max-width: min(55rem, calc(100vw - 3rem));
+  max-width: min(55rem, calc(100vw - 5rem));
   margin: var(--top-padding) auto;
   padding: 15px;
   background-color: var(--color-inner-bg);
@@ -78,6 +72,11 @@ a:hover {
   border-radius: 0.5em;
   border: solid var(--color-shadow);
   border-width: 0 3px 3px;
+  
+}
+
+.links {
+  font-size: clamp(0.8rem, 3.2vw, 1rem);
   line-height: 1.75em;
 }
 
@@ -89,7 +88,6 @@ a:hover {
 .content img {
   max-width: 10em;
 }
-
 
 ul {
   font-family: 'Ubuntu Mono', monospace;
