--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 @font-face {font-family: 'Ubuntu Mono'; src: url(UbuntuMono-Bold.ttf)}
 
 :root {
-  --top-padding: 5em;
-
+  --top-padding: clamp(2.5rem, 7vw, 5rem);
   --color-green: #26c983;
   --color-blue: #1a7ce2;
   --color-inner-bg: #ffffff;
@@ -24,17 +23,9 @@
 }
 
 @keyframes flash {
-  0% {
-      filter: hue-rotate(0deg);
-  }
-
-  50% {
-      filter: hue-rotate(180deg);
-  }
-
-  100% {
-      filter: hue-rotate(360deg);
-  }
+  0% {filter: hue-rotate(0deg)}
+  50% {filter: hue-rotate(180deg)}
+  100% {filter: hue-rotate(360deg)}
 }
 
 body {
@@ -57,12 +48,6 @@ a:hover {
   text-decoration: underline;
 }
 
-.plug {
-  float: right;
-  margin: 0.6em;
-  font-size: clamp(0.8rem, 2vw, 1rem);
-}
-
 .inner {
   max-width: min(55rem, calc(100vw - 5rem));
   margin: var(--top-padding) auto;
@@ -72,12 +57,12 @@ a:hover {
   border-radius: 0.5em;
   border: solid var(--color-shadow);
   border-width: 0 3px 3px;
-  
 }
 
-.links {
-  font-size: clamp(0.8rem, 3.2vw, 1rem);
-  line-height: 1.75em;
+.plug {
+  float: right;
+  margin: 0.6em;
+  font-size: clamp(0.8rem, 2vw, 1rem);
 }
 
 .content p {
@@ -87,6 +72,11 @@ a:hover {
 
 .content img {
   max-width: 10em;
+}
+
+.links {
+  font-size: clamp(0.8rem, 3.2vw, 1rem);
+  line-height: 1.75em;
 }
 
 ul {
