--- a/main.css
+++ b/main.css
@@ -28,6 +28,12 @@
   100% {filter: hue-rotate(360deg)}
 }
 
+@-webkit-keyframes flash {
+  0% {filter: hue-rotate(0deg)}
+  50% {filter: hue-rotate(180deg)}
+  100% {filter: hue-rotate(360deg)}
+}
+
 body {
   background-color: var(--color-body-bg);
   font-family: 'Calamity','sans-serif';
